updated linked to resume and corrected spacing in contact info

--- a/HTML/css/main.css
+++ b/HTML/css/main.css
@@ -790,6 +790,13 @@ section {
   opacity: 0;
 }
 
+.contact-row{
+  width: 700px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
 /*====================================================
     11. MAGNIFIC POPUP.
   ====================================================*/
@@ -1468,4 +1475,11 @@ img.mfp-img {
   .col-mt-sm {
     margin-top: var(--sm-margin-top);
   }
+  .contact-row{
+    display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+    max-width: 700px;
+}
 }
