--- a/HTML/css/stylesheet.css
+++ b/HTML/css/stylesheet.css
@@ -1652,21 +1652,24 @@ img.mfp-img {
   /* -webkit-box-shadow: 0px 2px 10px 0px rgba(12, 0, 46, 1);
   box-shadow: 0px 2px 10px 0px rgba(12, 0, 46, 0.09);
   background-image: url(https://images.unsplash.com/photo-1512626120412-faf41adb4874?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=2250&q=80); */
-  display: block;
-  margin-left: 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  width: auto;
 }
 
 .side-badge {
   background-color: #fff;
   max-width: 100%;
-  padding: 35px 0px;
+  padding: 35px 35px;
 }
 
 .inner-badge {
   background: var(--main-dark-color);
-  max-width: 350px;
+  /* max-width: 350px; */
   margin-left: -50px;
   padding: 2.5rem;
   -webkit-box-shadow: 0px 2px 10px 0px rgba(12, 0, 46, 1);
